# muscleshare

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: nextjs.yml  rust.yml
backend/: .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/migrations/: 20240822064116_init.sql  20241003133145_add_image_id_to_table.sql
backend/src/: handlers.rs  main.rs  repositories.rs
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/(auth)/: layout.tsx  page.module.css  page.tsx
frontend/src/app/(authenticated)/: layout.tsx
frontend/src/app/(authenticated)/[image_id]/: page.tsx
frontend/src/app/(authenticated)/[user_name]/: ClientSide.tsx  page.tsx
frontend/src/app/(authenticated)/[user_name]/components/: Footer.module.css  IsLoginComponent.tsx  MainTop.module.css  MainTop.tsx  Post.tsx  SideMenu.module.css
frontend/src/app/(authenticated)/[user_name]/update/: page.tsx  update.module.css
frontend/src/app/(authenticated)/api/: handle_icon.ts  handle_post.ts  handle_user_info.ts
frontend/src/app/(authenticated)/components/: SideMenu.tsx
frontend/src/app/(authenticated)/context/: UserContext.tsx
frontend/src/app/(authenticated)/main/: page.module.css  page.tsx
frontend/src/app/(authenticated)/post/: page.module.css  page.tsx
frontend/src/components/: Footer.tsx  MainHead.tsx  Post.tsx  SideMenu.module.css  firebase.js
(+9 files in other folders)
